# cpu-render

./: .gitignore  CMakeLists.txt  img.ppm  main.cpp  mesh.cpp  mesh.h  readme.md  render.cpp  render.h  tracingRender.cpp  tracingRender.h  utils.h
models/fo/: foo_update_1.mtl
src/: main.cpp  mesh.cpp  mesh.h  render.cpp  tracingRender.cpp  tracingRender.h  utils.h
src/core/: AreaLight.h  BVH.cpp  BVH.h  OBJ_Loader.h  bounds3.h  fresnel.cpp  fresnel.h  geometry.cpp  geometry.h  inputFile.h  interaction.cpp  interaction.h  light.cpp  light.h  material.cpp  material.h  medium.cpp  medium.h  mesh.cpp  mesh.h  r.h  render.h  scene.cpp  scene.h  shape.cpp  shape.h  tracingRender.cpp  tracingRender.h  triangle.cpp  triangle.h  utils.h
src/lib/: OBJ_Loader.h
src/model/buddha-fractal/: buddha-fractal.pbrt  geometry.pbrt
src/model/buddha-fractal/geometry/: buddha.ply
src/rasterRender/: raytracing.h
src/template/: basic.h
